# pyannote_whisper_transcriber

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  tran_output.txt
transcriber/: AudioTranscriber.py  __init__.py
transcriber/models/: pyannote_diarization_config.yaml
